--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<header class="header_area padding-bottom-70" id="s11">
 	        <div class="container-fluid">
 					<video autoplay loop id="myVideo">
-							<source src="/root/Downloads/Slash ft. Myles Kennedy .mp4" type="video/mp4">
+							<source src="img/Slash ft. Myles Kennedy .mp4" type="video/mp4">
 						  </video>
 						  <section class="nav_area" id="top">
 								<nav class="navbar navbar-fixed-top navbar-transparent" role="navigation" id="nav">
