--- a/VideoChatApp.html
+++ b/VideoChatApp.html
@@ -3,11 +3,13 @@
  <title> Video Chat App </title>
 </head>
 <body>
-              <iframe
+     
+        <iframe
           src="https://tokbox.com/embed/embed/ot-embed.js?embedId=4ac74b23-5b34-4757-87fd-3fb18278e399&room=DEFAULT_ROOM&iframe=true"
           width=800
           height=640
           scrolling="auto"
-          allow="microphone; camera"></iframe>
+          allow="microphone; camera"
+        ></iframe>
 </body>
 </html>
