--- a/VideoChatApp.html
+++ b/VideoChatApp.html
@@ -1,15 +1,84 @@
 <html>
 <head>
+   <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
  <title> Video Chat App </title>
+ <style>
+      h1 {
+        margin: 2em 0;
+      }
+    </style>
+ <!-- widget stuff here -->
+  <script src="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.9.0/js/okta-sign-in.
+min.js" type="text/javascript"></script>
+  <link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.9.0/css/okta-sign-in.
+min.css" type="text/css" rel="stylesheet"/>
+  <link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.9.0/css/okta-theme.cs
+s" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-     
-        <iframe
+     <div class="container">
+      <h1 class="text-center">Simple Web Page</h1>
+      <div class="jumbotron">
+        You are not logged in. Get outta here! Shoo! >:S
+      </div>
+   <!-- where the sign-in form will be displayed -->
+      <div id="sign-in-container"></div>
+    </div>
+<script type="text/javascript">
+  var oktaSignIn = new OktaSignIn({
+    baseUrl: "https://dev-683948.okta.com",
+    clientId: "0oailpnomC111ZaOo356",
+    authParams: {
+      issuer: "https://dev-683948.okta.com/oauth2/default",
+      responseType: ["token", "id_token"],
+      display: "page"
+    }
+  });
+
+  if (oktaSignIn.token.hasTokensInUrl()) {
+    oktaSignIn.token.parseTokensFromUrl(
+      // If we get here, the user just logged in.
+      function success(res) {
+        var accessToken = res[0];
+        var idToken = res[1]
+
+        oktaSignIn.tokenManager.add("accessToken", accessToken);
+        oktaSignIn.tokenManager.add("idToken", idToken);
+
+        window.location.hash = "";
+        document.getElementById("messageBox").innerHTML = "Hello, " + idToken.claims.email + "! You just logged in! :)";
+      },
+      function error(err) {
+        console.error(err);
+      }
+    );
+  } else {
+    oktaSignIn.session.get(function (res) {
+      // If we get here, the user is already signed in.
+      if (res.status === 'ACTIVE') {
+        document.getElementById("messageBox").innerHTML = "Hello, " + res.login + "! You are *still* logged in! :)";
+        return;
+      }
+
+      // If we get here, the user is not logged in, so we should show the sign-in form.
+      oktaSignIn.renderEl(
+        { el: '#sign-in-container' },
+        function success(res) {},
+        function error(err) {
+          console.error(err);
+        }
+      );
+    });
+  }
+</script>
+  </body>
+</html>
+        <!--<iframe
           src="https://tokbox.com/embed/embed/ot-embed.js?embedId=4ac74b23-5b34-4757-87fd-3fb18278e399&room=DEFAULT_ROOM&iframe=true"
           width=800
           height=640
           scrolling="auto"
           allow="microphone; camera"
-        ></iframe>
-</body>
-</html>
+        ></iframe>-->
