--- a/VideoChatApp.html
+++ b/VideoChatApp.html
@@ -24,14 +24,14 @@
   type="text/css"
   rel="stylesheet"/>
 </head>
-<body>
+<body>  <!--
      <div class="container">
       <h1 class="text-center">Simple Web Page</h1>
       <div id="messageBox" class="jumbotron">
         You are not logged in. Get outta here! Shoo! >:S
       </div>
    <!-- where the sign-in form will be displayed -->
-      <div id="sign-in-container"></div>
+      <!--<div id="sign-in-container"></div>
     </div>
 <script type="text/javascript">
   var oktaSignIn = new OktaSignIn({
@@ -79,13 +79,14 @@
       );
     });
   }
-</script>
-  </body>
-</html>
-        <!--<iframe
+</script>-->
+   <iframe
           src="https://tokbox.com/embed/embed/ot-embed.js?embedId=4ac74b23-5b34-4757-87fd-3fb18278e399&room=DEFAULT_ROOM&iframe=true"
           width=800
           height=640
           scrolling="auto"
           allow="microphone; camera"
-        ></iframe>-->
+        ></iframe>
+  </body>
+</html>
+      
