--- a/VideoChatApp.html
+++ b/VideoChatApp.html
@@ -30,8 +30,8 @@
       <div id="messageBox" class="jumbotron">
         You are not logged in. Get outta here! Shoo! >:S
       </div>
-   <!-- where the sign-in form will be displayed -->
-      <!--<div id="sign-in-container"></div>
+   where the sign-in form will be displayed
+    <div id="sign-in-container"></div>
     </div>
 <script type="text/javascript">
   var oktaSignIn = new OktaSignIn({
