--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 	<body>
 		<p><a href="Concert.html">Concert Booking</p>
 		<p><a href="VideoChatApp.html">Chat App</p>
+		<p><a href="AnimatedText.html">Nidhi</p>
 	</body>
 </html>
