--- a/nidhi.html
+++ b/nidhi.html
@@ -4,11 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <script src="https://codepen.io/steveg3003/pen/zBVakw"></script>
+    <link id="data" href = "https://codepen.io/peet86/pen/rLXdWz" type="application/json"/>
+    <script id="data" type="application/json" src="https://codepen.io/steveg3003/pen/zBVakw"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
     <script type = "text/javascript">
+window.onload = function () {
       var SVG = Snap('#svg');
 var container = $('.container');
 var toggle = $('#toggle a');
@@ -21,6 +23,7 @@ var availableLetters = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', '
 var letters = {};
 var sentence = [];
 var autoTypeSpeed = 250;
+var autoDeleteSpeed = 100;
 var blinkLine;
 var blinkLineHeight = 70;
 var multiColors = true;
@@ -58,17 +61,19 @@ blinkLine = SVG.path('M0,0 0,' + blinkLineHeight)
 
 $(window).resize(onResize);
 onResize();
-
+setTimeout(function(){
+		   window.location.href = 'rain.html';
+		}, 18000);
 // newLetter(letters.a);
 // newLetter(letters.b);
 // newLetter(letters.c);
 
-var welcomeMessage = 'hello';
-
+var welcomeMessage = 'welcome nidhi';
 setTimeout(addWelcomeLetter, autoTypeSpeed)
-
+var i = welcomeMessage.length;
+var j = 2;
 function addWelcomeLetter()
-{
+{	
 	if(welcomeMessage.length > 0)
 	{
 		onInput(welcomeMessage.substring(0, 1));
@@ -76,11 +81,27 @@ function addWelcomeLetter()
 		setTimeout(addWelcomeLetter, autoTypeSpeed)
 	}
 	else
-	{
-		setupInput();
+	{     
+		setTimeout(removeWelcomeLetter, 3000)
 	}
 }
 
+function removeWelcomeLetter() 
+{
+
+	if(i > 0){
+		  i--;
+		removeLast();
+		setTimeout(removeWelcomeLetter, autoDeleteSpeed)
+		
+	} else {
+	        welcomeMessage = 'a little surprise for you';
+		i = welcomeMessage.length;
+		while(j-- > 0) 
+		 addWelcomeLetter()
+	}
+
+}
 function setupInput()
 {
 	$(window).keydown(function(e) 
@@ -362,12 +383,42 @@ function removeLetter(letter)
 {
 	if(letter) letter.remove();
 }
+}
     </script>
     <style>
-        @import 'https://fonts.googleapis.com/css?family=Catamaran';
+html,
+body,
+.background {
+	width: 100%;
+	height: 100%;
+}
 
-html, body
-{
+.background {
+	position: relative;
+	background: linear-gradient(120deg, rgba(50, 150, 100, 0.6), rgba(0, 0, 100, 0));
+}
+
+.background:before, .background:after {
+	position: absolute;
+	content: " ";
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: linear-gradient(0deg, rgba(0, 0, 200, 0.6), rgba(0, 0, 200, 0));
+}
+
+.background:after {
+	background: linear-gradient(240deg, rgba(150, 50, 50, 0.6), rgba(0, 0, 200, 0));
+}
+       @font-face {
+	font-family: 'Catamaran';
+	font-style: normal;
+	font-weight: 400;
+	src: local("Catamaran Regular"), local("Catamaran-Regular"), url(https://fonts.gstatic.com/s/catamaran/v6/o-0IIpQoyXQa2RxT7-5r5TRF.ttf) format("truetype");
+}
+
+html, body {
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -376,71 +427,50 @@ html, body
 }
 
 body {
-  background: #eeeeff;
+	background: #eeeeff;
 }
 
-.container
-{
-    display: flex;
+.container {
+	display: flex;
 	flex-direction: column;
-    align-items: center;
-  	justify-content: center;
+	align-items: center;
+	justify-content: center;
 	margin: 0;
 	padding: 0;
 	height: 100%;
 	width: 100%;
 }
 
-svg
-{
+svg {
 	z-index: 10;
-	
-	.letter
-	{
-		fill: none;
-		stroke: #fff;
-		stroke-width: 5;
-		stroke-miterlimit: 10;
-	}
 }
 
-.blinky-mcblinkface
-{
+svg .letter {
+	fill: none;
+	stroke: #fff;
+	stroke-width: 5;
+	stroke-miterlimit: 10;
+}
+
+.blinky-mcblinkface {
 	animation: 1s blink step-end infinite;
 }
 
 @keyframes "blink" {
-  from, to {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-}
+	from, to {
+		opacity: 0;
+	}
 
-#toggle
-{
-	position: fixed;
-	top: 10px;
-	left: 10px;
-	z-index: 100;
-	
-	a
-	{
-		color: white;
-		text-decoration: none;
-		
-		&:hover
-		{
-			color: #eee;
-		}
+	50% {
+		opacity: 1;
 	}
 }
 
     </style>
-      <title>Auto Complete Text</title>
+      <title>Nidhi</title>
    </head>
 <body>
+<div class="background">
     <div class="container background">
 	<svg id="svg">
 		<defs>
@@ -547,6 +577,7 @@ svg
 		</defs>
 		<g id="stage"></g>
 	</svg>
+</div>
 </div>
    </body>
 </html>
